--- a/agent-ai-client/src/app/pages/agent-page/agent-page.component.scss
+++ b/agent-ai-client/src/app/pages/agent-page/agent-page.component.scss
@@ -53,12 +53,16 @@
   right: 10px;
   width: calc(82%);
   display: flex;
+  flex-direction: column;
   justify-content: center;
   gap: 8px;
   padding: 12px 16px;
 
   backdrop-filter: blur(2px);
-  border-top: 1px solid rgba(0,0,0,0.1);
+  border: 1px solid var(--p-fileupload-border-color);
+  border-radius: var(--p-fileupload-border-radius) 6px;
+  //background: var(--p-fileupload-background);
+  //color: var(--p-fileupload-color);
 
   transition: bottom 0.6s ease-in-out;
 
@@ -122,6 +126,10 @@
 .agent-message-container {
   justify-content: start;
   text-align: left;
+}
+
+.file-data-size {
+  font-size: var(--small-details-font-size);
 }
 
 .cursor {
